<resources>
    <string name="app_name">Helios</string>
    <string name="title_section1">PV Reference</string>
    <string name="title_section2">Solar Thermal Reference</string>
    <string name="title_section3">Production Estimation</string>
    <string name="orientationprompt">Orientation</string>
    <string name="shadeprompt">Shade Factor</string>
    <string name="pitchprompt">Slope</string>
    <string name="postcodeprompt">Postcode</string>
    <string name="wkpprompt">Array Wp</string>
    <string name="whprod">Annual Production (kWh)</string>
    <string name="pv_dccables1">
	 \t \t <b>Voltage</b>: V<sub>oc</sub>(stc) \u00D7 1.15 \u00D7  M
	\n \t \t <b>Current</b>: I <sub>sc</sub>(stc) \u00D7 1.25 \u00D7  (N-1)
\nwhere M is the number of modules per string and N is the number of strings. \n
    </string>
     <string name="pv_dccables2">
\n \t The overall voltage drop, at array maximum operating power (stc), between the array and the inverter is under 3%. Cables should be sized in accordance with BS 7671. See DC Current and Voltage for voltage and current calculations. It is expected that “PV cables” are used if they are available. It is recommended that all cables comply with UL 4703, or TUV 2 Pfg 1169 08.2007.
\n \t To minimise the risk of faults, cable runs should be as short as practicable. Runs over 20m require labels (below) to be fixed every 5-10m. Cabled over about 50m should be installed in earthed metal conduit or trunking, or be screened cables such as armoured. Positive and negative cables of the same string or main d.c. supply should be installed together, avoiding the creation of loops in the system. This requirement includes any associated earth/bonding conductors. Exterior cable <b>colour coding</b> is not required for PV systems.
    </string>
 <string name="pv_dccables3">
\t Cables routed behind a PV array must be rated for a temperature range of at least of <b>15\u00B0;C to 80\u00B0;C</b>. External cables and ties should be UV stable and water resistant. Where cables are likely to be subjected external movement, i.e. those mounted immediately behind the array, it is recommended that they be <b>flexible</b> (multi-stranded) to allow for thermal/wind movement of arrays/modules.
\n \t PV array cables almost exclusively rely on <b>double or reinforced insulation</b> as their means of shock protection they should not be buried in walls or otherwise hidden in the building structure as mechanical damage would be very difficult to detect and may lead to increase instances of shock and fire risk.

    </string>
 <string name="pv_dccables4">
\t Plugs and socket connectors mated together in a PV system shall be of the same type from the same manufacturer and shall comply with BS EN 50521. Different brands may only be interconnected where a test report has been provided that complies with BS EN 50521.
\n \t Connectors readily accessible to ordinary persons shall be of the locking type, requiring a tool or two separate actions to separate and shall have sign attached that reads:  ‘Do not disconnect d.c. plugs and sockets under load’
    </string>
    <string name="pv_dccables5">
   \n \t The cable current carrying capacity must be calculated according to the requirements of BS 7671. This shall include factors taking into account installation conditions such as cable installation method, solar gains and grouping etc. The cable current carrying capacity after de-rating factors have been applied must exceed the string fuse rating and must exceed the I<sub>sc</sub> \u00D7 1.25.
</string>
    <string name="pv_inverter1">
\tInverters must carry a Type Test certificate to the requirements of Engineering Recommendation G83 or G59 as applicable unless specifically agreed by an engineer employed by or appointed by the DNO for this purpose, and in writing.
\n\t A key safety consideration is that the PV system will disconnect when the distribution system is not energised.
\n\tWhere a system features <b>multiple strings/arrays</b> with significantly different orientation or inclination, the strings or arrays should be connected to an inverter with a multiple MPPT function or separate inverters should be utilised.
    </string>
        <string name="pv_inverter2">
	 \t \t <b>Voltage</b>: V<sub>oc</sub>(stc) \u00D7 1.15
	\n \t \t <b>Current</b>: I <sub>sc</sub>(stc) \u00D71.25

\n\t This must include any initial overvoltage period which is a feature of some module types. This is to include verifying that the inverter can safely withstand the array open circuit voltage maximum at -15\u00B0C.
    </string>
        <string name="pv_inverter3">
\tWhile an inverter must be able to safely withstand array operation between -15\u00B0C to 80\u00B0C, it is permissible for a narrower temperature band (e.g. -10\u00B0C to 70\u00B0C) to be used when looking at the operational mpp range of the inverter. In such cases, an assessment should be made as to the temperature range acceptable and appropriate for that particular site and array mounting method (e.g. some building integrated systems will operate at higher temperatures than “on-top” systems)    </string>
        <string name="pv_inverter4">
\tIt is common practice for an inverter power to be less than the PV array rating. In the UK, inverters are typically sized in the range of 100 - 80% of array capacity.  However, in certain circumstances and depending on the inverter used, ratios outside this are sometimes utilised (NB: Inverter power is taken to be maximum steady state a.c. power output).
    </string>
        <string name="pv_inverter5">
\tInverters generate heat and should be provided with sufficient ventilation. Clearance distances as specified by the manufacturer (e.g to a heatsink) should also be observed. Inverter locations such as Plant or Boiler rooms, or roof spaces prone to high temperatures, should be carefully considered to avoid overheating. Failure to follow this can cause a loss in system performance as the inverter will de-rate when it reaches its maximum operating temperature. This should be highlighted within the operation and use manual, left with the customer and ideally with a label – “not to block ventilation” – placed next to the inverter.
    </string>
        <string name="pv_inverter6">
\tProtection for the cable from the inverter(s) must be provided at the distribution board. This protective measure shall be specified and installed in accordance with the requirements of BS 7671. In very many cases the current limiting nature of the PV array and inverter(s) omits the requirements for overload protection and therefore the designer only need to consider fault current protection. The protection afforded at the origin of the circuit (the distribution board) in accordance with BS 7671, means there is no requirement for additional overcurrent protection to be installed at the inverter end of the a.c. Installation.
\n\tIt is recommended that Inverters carry a sign ‘Inverter - isolate a.c. and d.c. before carrying out work’.
    </string>
    <string name="pv_roof1">
\tAll fixing and flashing components used to mount and make weather-tight the solar roofing product must be packaged and listed as part of a complete kit that includes the PV module. The MCS installer must ensure that the system is installed to comply with the manufacturer’s instructions. The weather tightness of the PV system should be the same or better than the roof or cladding systems they are replacing and should not adversely affect the weather tightness of the surrounding covering.
    </string>
    <string name="pv_roof2">
\tAll fixing and flashing components used to mount and make weather-tight the PV system must be specifically approved to work together (e.g. supplied and listed as a kit of parts) and listed to work with either the named PV module, or listed as a universal type where PV module type is immaterial to the performance of the system. The MCS installer must ensure that the system is installed to comply with the manufacturer’s instructions for both the mounting system and the PV module.
    </string>
    <string name="pv_roof3">
\t All components used to mount the system must be specifically approved to work together or be listed as universal components. The mounting system must also be listed to work with either the named PV module, or listed as a universal type where PV module type is immaterial to the performance of the system. The MCS installer must ensure that the system is installed to comply with the manufacturer’s instructions for both the mounting system components and the PV module. Systems attached to tile roofs should be designed and installed such that the fixing brackets do not displace the tiles and cause gaps more than naturally occurs between the tiles. Fixing methods must not subject roof coverings to imposed loads which may degrade their primary purpose of maintaining weather-tightness.
    </string>
    <string name="pv_roof4">
\tTiles or slates removed for fixing a mounting bracket should be re-attached to include a means of mechanical fixing. Historically, some mounting systems on slate or tile roofs have relied on a simple “through bolt” approach. However, this fixing method has the potential for the fixing bolts or sealing washer cracking the slates/tiles beneath them. It can also present difficulties with ensuring the long term weather tightness and durability of the roof penetration. It is good practice to notch tiles when fixing a roof bracket
    </string>
    <string name="pv_roof5">
\tThe roof underlay should be inspected for damage during installation works. Any damage should be repaired or the underlay replaced as necessary. Damaged underlay will not provide an effective weather and air barrier and can affect weather tightness and the wind loads imposed on the roof cladding. Site work should include verification to confirm that all the design requirements have been satisfied and that the roof covering has not been adversely affected by the installation work.
    </string>
    <string name="pv_roof6">
\tUnless specifically designed to do so , systems should be kept away from the roof perimeter.  For a domestic roof, a suitable minimum clearance zone is around 40-50cm.   The requirement to keep an arrays away from a the edge of a roof is suggested because:     </string>
    <string name="pv_roof7">
<i>Note</i>: on many roofs a 50cm gap from the edge will still mean that PV modules are fitted in the “Edge Zone” as defined in BS EN 1991-1 where higher pressure coefficients need to be implemented due to the higher imposed wind loads.
    </string>
    <string name="pv_roof8">
\t<b>Cable penetrations</b> through the roof should not affect the weather tightness of the roof and should be durably sealed to accommodate the movement and temperatures expected. The use of a purpose-made product is an example of a durable means to achieve this. Cable penetrations through underlay should be achieved using purpose-made products or, if taken through a lap in the underlay, the cable should be carefully routed, clipped and tensioned so as to leave a minimal residual gap in the underlay lap joint.
\n\t<b>Thermal expansion</b> should be considered when installing larger arrays. The module and mounting system manufacturer should be consulted to determine the maximum array width and continuous rail length that can be permitted without the need for an expansion gap.
\n\tSome PV array mounting systems rely on securing the array to the <b>metal roof cladding</b>. In such circumstances, the adequacy of the roof covering to transfer all additional loads back to the supporting structure should be verified. This should include consideration of all elements of the roof construction that could be affected by the additional loading. Calculations will include consideration of the array configuration (pitched or parallel to the roof) and the type, quantity and locations of PV array fixings.
    </string>
</resources>