<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.mk.helios.PV_Safety" android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\tIn all cases it is expected that the manufacturers’ fixing instructions are followed with respect to wind loading. "
                android:id="@+id/text3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nIn roof products (eg PV tiles) "
                android:id="@+id/textView"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof1"
                android:id="@+id/text1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nIn roof mounting system "
                android:id="@+id/textVife2w"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof2"
                android:id="@+id/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nAbove roof mounting systems "
                android:id="@+id/textVief2w"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof3"
                android:id="@+id/tsex2t" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nThrough Bolts"
                android:id="@+id/textgVie2w"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof4"
                android:id="@+id/tebx2t" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/bulletlist" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nRoof Underlay"
                android:id="@+id/textVite2w"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof5"
                android:id="@+id/tex2rt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nPlacement"
                android:id="@+id/textViec2w"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof6"
                android:id="@+id/tex2bt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/bulletlist2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof7"
                android:id="@+id/tevx2t" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nOther"
                android:id="@+id/textVice2w"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_roof8"
                android:id="@+id/tcex2t" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
