<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.mk.helios.PV_Safety" android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="String Cable Minimum Rating "
                android:id="@+id/textView"
                android:textSize="@dimen/textheading" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_dccables1"
                android:id="@+id/safetybullet1" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/pv_mnarray"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_dccables5"
                android:id="@+id/safetybullet31" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n Cable Runs"
                android:id="@+id/textView354"
                android:textSize="@dimen/textheading" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_dccables2"
                android:id="@+id/textView3"
               />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/pv_dccable"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_dccables3"
                android:id="@+id/text" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n Plug and Socket Connectors"
                android:id="@+id/textView34"
                android:textSize="@dimen/textheading" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_dccables4"
                android:id="@+id/text4" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
