<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.mk.helios.PV_Safety" android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Requirements"
                android:id="@+id/textView"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_inverter1"
                android:id="@+id/text17" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nSizing Factors"
                android:id="@+id/textView6"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nInverter Rating Minimum"
                android:id="@+id/textView1"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_inverter2"
                android:id="@+id/text32" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nTemperature range"
                android:id="@+id/textView54"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_inverter3"
                android:id="@+id/text1" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nPower ratio"
                android:id="@+id/textVie2w"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_inverter4"
                android:id="@+id/tex2t" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nInverter ventilation "
                android:id="@+id/textView3"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_inverter5"
                android:id="@+id/tex4t" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\nProtection"
                android:id="@+id/textView5"
                android:textSize="@dimen/textheading" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pv_inverter6"
                android:id="@+id/text6" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
