<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>
        <TextView
            android:text="@string/wkpprompt"
            android:padding="3dip"
            android:textSize="30sp" />

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_column="1">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/kwpedittext"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/field_background"
                android:gravity="center_vertical|center"
                android:text="250" />
        </FrameLayout>

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/postcodeprompt"
            android:padding="3dip"
            android:textSize="30sp" />
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postcodespinner"
            android:layout_column="1"
            android:entries="@array/postcodes"
            android:prompt="@string/postcodeprompt"
            android:spinnerMode="dialog"
            android:layout_gravity="center"
            android:minWidth="100dp"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:background="@color/field_background"
            android:gravity="center_vertical|center_horizontal" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/pitchprompt"
            android:padding="3dip"
            android:textSize="30sp" />
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pitchspinner"
            android:layout_column="1"
            android:entries="@array/pitchentries"
            android:prompt="@string/pitchprompt"
            android:spinnerMode="dialog"
            android:layout_gravity="center"
            android:minWidth="100dp"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:background="@color/field_background"
            android:gravity="center_vertical|center_horizontal" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/orientationprompt"
            android:padding="3dip"
            android:textSize="30sp" />
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orientationspinner"
            android:layout_column="1"
            android:entries="@array/orientationentries"
            android:prompt="@string/orientationprompt"
            android:spinnerMode="dialog"
            android:layout_gravity="center"
            android:minWidth="100dp"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:background="@color/field_background"
            android:gravity="center_vertical|center_horizontal" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/shadeprompt"
            android:padding="3dip"
            android:textSize="30sp" />
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shadespinner"
            android:layout_column="1"
            android:entries="@array/shadeentries"
            android:prompt="@string/shadeprompt"
            android:spinnerMode="dialog"
            android:layout_gravity="center"
            android:minWidth="100dp"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:background="@color/field_background"
            android:gravity="center_vertical|center_horizontal" />


    </TableRow>








</TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:id="@+id/calculatebutton"
        android:layout_column="0"
        android:layout_gravity="center"
        android:textSize="30sp" />

    <TextView
        android:text="@string/whprod"
        android:padding="3dip"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:gravity="center" />



        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="30sp"
            android:id="@+id/viewproduction"
            android:layout_column="0"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@color/field_background"
            android:gravity="center_vertical|center"
            android:text="0" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textoptimuminfo"
        android:layout_gravity="center_horizontal"
        android:background="#00FFFFFF"
        android:textSize="10sp"
        android:textAlignment="center"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:padding="0dp" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>